--- a/giaodien.html
+++ b/giaodien.html
@@ -59,6 +59,29 @@
                         </div>
                     </div>
                 </div>
+                <div class="image">
+                    <div class="img _to">
+                        <img src="../baitap tuan6/BaiTap_TH_Tuan_05_Web/Image 1705.png" alt="">
+                    </div>
+                    <div class="bon_img">
+                       <div class="hai_hinh_tren">
+                        <div class="hinh_tren1">
+                            <img src="../baitap tuan6/BaiTap_TH_Tuan_05_Web/Image 1708.png" alt="">
+                        </div>
+                        <div class="hinh_tren2">
+                            <img src="../baitap tuan6/BaiTap_TH_Tuan_05_Web/Image 1707.png" alt="">
+                        </div>
+                       </div>
+                       <div class="hai_hinh_duoi">
+                        <div class="hinh_duoi1">
+                            <img src="../baitap tuan6/BaiTap_TH_Tuan_05_Web/Image 1706.png" alt="">
+                        </div>
+                        <div class="hinh_duoi2">
+                            <img src="../baitap tuan6/BaiTap_TH_Tuan_05_Web/Image 1709.png" alt="">
+                        </div>
+                       </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
