--- a/giaodien.html
+++ b/giaodien.html
@@ -82,6 +82,20 @@
                        </div>
                     </div>
                 </div>
+                <div class="vb">
+                    <br class="product">
+                        <b>Product description</b>
+                        <br>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem lorem aliquam sed lacinia quis. Nibh dictumst vulputate
+                            <br>odio pellentesque sit quis ac, sit ipsum. Sit rhoncus velit in sed massa arcu sit eu.Vitae et vitae eget lorem non dui.
+                            <br>Sollicitudin ut mi adipiscing duis.</br>
+                            <br>Convallis in semper laoreet nibh leo. Vivamusmalesuada ipsum pulvinar non rutrum risus dui, risus. Purus massa velit
+                            <br>iaculis tincidunt tortor, risus, scelerisque risus. In at lorem pellentesque orci aenean dictum dignissim in. Aenean
+                            <br>pulvinar diam interdum ullamcorper. Vel urna, tortor, massa metus purus metus.Maecenas mollis in velit auctor cursus
+                            <br>scelerisque eget.</br>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
